src/objects/Crosswalk__c.object
<CustomObject>
    <description>This object is used to store mapping of Benefit Category and associated Benefit Code List.</description>
    <fields>
        <fullName>Benefit_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Code</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BenefitsCrosswalkExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>BenefitsCrosswalkExternalID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Category_Code__c</fullName>
        <label>Category Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABORTION</fullName>
                </value>
                <value>
                    <fullName>ACUPUNCTURE</fullName>
                </value>
                <value>
                    <fullName>ALLERGY</fullName>
                </value>
                <value>
                    <fullName>AMBULANCE</fullName>
                </value>
                <value>
                    <fullName>AMBULATORY SURGERY</fullName>
                </value>
                <value>
                    <fullName>ANESTHESIA</fullName>
                </value>
                <value>
                    <fullName>AUDITORY</fullName>
                </value>
                <value>
                    <fullName>AUTISM BENEFITS</fullName>
                </value>
                <value>
                    <fullName>BARIATRIC SURGERY</fullName>
                </value>
                <value>
                    <fullName>BEHAVIORAL HEALTH</fullName>
                </value>
                <value>
                    <fullName>BIOFEEDBACK</fullName>
                </value>
                <value>
                    <fullName>BIOPSY</fullName>
                </value>
                <value>
                    <fullName>CARDIAC REHABILITATION</fullName>
                </value>
                <value>
                    <fullName>CARDIOVASCULAR</fullName>
                </value>
                <value>
                    <fullName>CHEMO INJECT</fullName>
                </value>
                <value>
                    <fullName>CHIROPRACTIC</fullName>
                </value>
                <value>
                    <fullName>COLONOSCOPY</fullName>
                </value>
                <value>
                    <fullName>CONTRACEPTIVES</fullName>
                </value>
                <value>
                    <fullName>DENTAL ACCIDENTAL</fullName>
                </value>
                <value>
                    <fullName>DERMATOLOGY</fullName>
                </value>
                <value>
                    <fullName>DIABETES</fullName>
                </value>
                <value>
                    <fullName>DIAGNOSTIC TESTING</fullName>
                </value>
                <value>
                    <fullName>DIALYSIS</fullName>
                </value>
                <value>
                    <fullName>DME</fullName>
                </value>
                <value>
                    <fullName>EARLY INTERVENTION</fullName>
                </value>
                <value>
                    <fullName>EMERGENCY ROOM</fullName>
                </value>
                <value>
                    <fullName>ENDOSCOPY</fullName>
                </value>
                <value>
                    <fullName>FAMILY PLANNING</fullName>
                </value>
                <value>
                    <fullName>FORMULA/SPECIALIZED FOOD</fullName>
                </value>
                <value>
                    <fullName>GASTROENTEROLOGY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <label>Situs State</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>NY/NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Benefits Crosswalk</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>BenefitsCrosswalkExternalID__c</columns>
        <columns>Category_Code__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Benefit_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BC-{000000000}</displayFormat>
        <label>Benefits Crosswalk Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefits Crosswalks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>